added fevicon in  website

--- a/gate-tracker-web/public/index.html
+++ b/gate-tracker-web/public/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="GATE Tracker Web App" />
   <title>GATE Tracker</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="gate-fevicon.png" />
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
